@@ -1,9 +1,6 @@
-How to compile in 4 easy steps:
+How to compile in 3 easy steps:
 
-1) Make sure you've downloaded the WTL 7.1 Package and have all the files in it in your include path.
-   You can find it on the dc++ sourceforge site. Mind the version.
-
-2) Make sure you have stlport installed and that it's included _before_ the standard vc directories
+1) Make sure you have stlport installed and that it's included _before_ the standard vc directories
    Use the one supplied on the dc++ sourceforge page (do not use the one from www.stlport.org unless 
    you know what you're doing, I've modified it a little bit). Mind the version (download the latest
    one from the source extras).
@@ -12,17 +9,17 @@ How to compile in 4 easy steps:
      but I don't recommend this as it's completely untested, and the original distribution uses it.
      See client\config.h for further details.
 
-3) Make sure you have a fairly recent platform sdk (The one from msvc 7.1 works for me)
-   The sdk is freely available from ms: http://www.microsoft.com/msdownload/platformsdk/sdkupdate/
-   You need the core sdk at least (not the 64-bit edition...)
-   Make sure that this sdk is included _before_ the standard vc directories.
+2) Make sure you've downloaded the WTL 7.1 Package and have all the files in it in your include path.
+   You can find it on the dc++ sourceforge site. Mind the version.  Make sure it's listed after
+   stlport in your directory includes.
 
-4) Open the project workspace and press your build button. If you find your executable unreasonably large,
-   you probably compiled in debug mode - switch to release once you're done testing the code.
+3) Open the solution and press your build button. If you find your executable unreasonably large, you
+   probably compiled in debug mode - switch to release once you're done testing the code.
+
 
 Note 1;	I now use vc7.1 (2003). I don't care particularily if you use an older MS compiler (6.0, 7.0),
 	because these don't even come close to supporting the c++ standard. If you want to try anyway,
-	you're on your own. 
+	you're on your own.  You will need a new Platform SDK if you're using VS 6.0.
 	That said, the client part usually compiles fine with g++ 3.x, although there's a bug in 3.3
 	(and perhaps other versions) that prevents a few files from being compiled. Wait for 3.4 to
 	become mature for release, it's fixed there. 
