@@ -313,6 +313,11 @@ void DownloadManager::on(Command::SND, UserConnection* aSource, const Command& c
 	}
 }
 
+class RollbackException : public FileException {
+public:
+	RollbackException (const string& aError) : FileException(aError) { };
+	virtual ~RollbackException() { };
+};
 
 template<bool managed>
 class RollbackOutputStream : public OutputStream {
@@ -334,7 +339,7 @@ public:
 			size_t n = len < (bufSize - pos) ? len : bufSize - pos;
 
 			if(memcmp(buf + pos, wb, n) != 0) {
-				throw FileException(STRING(ROLLBACK_INCONSISTENCY));
+				throw RollbackException(STRING(ROLLBACK_INCONSISTENCY));
 			}
 			pos += n;
 			if(pos == bufSize) {
@@ -535,6 +540,16 @@ void DownloadManager::on(UserConnectionListener::Data, UserConnection* aSource, 
 			handleEndData(aSource);
 			aSource->setLineMode();
 		}
+	} catch(const RollbackException& e) {
+		string target = d->getTarget();
+		QueueManager::getInstance()->removeSource(target, aSource->getUser(), QueueItem::Source::FLAG_ROLLBACK_INCONSISTENCY);
+		fire(DownloadManagerListener::Failed(), d, e.getError());
+
+		d->resetPos();
+		aSource->setDownload(NULL);
+		removeDownload(d, true);
+		removeConnection(aSource);
+		return;
 	} catch(const FileException& e) {
 		fire(DownloadManagerListener::Failed(), d, e.getError());
 
@@ -881,5 +896,5 @@ void DownloadManager::on(UserConnectionListener::FileNotAvailable, UserConnectio
 
 /**
  * @file
- * $Id: DownloadManager.cpp,v 1.111 2004/08/02 15:29:19 arnetheduck Exp $
+ * $Id: DownloadManager.cpp,v 1.112 2004/08/07 09:36:05 arnetheduck Exp $
  */
