@@ -368,6 +368,7 @@ void QueueManager::on(TimerManagerListener::Minute, u_int32_t aTick) throw() {
 				}
 				online = qi->hasOnlineUsers();
 				recent.push_back(searchString);
+				nextSearch = aTick + (online ? 120000 : 300000);
 			}
 		}
 	}
@@ -376,7 +377,6 @@ void QueueManager::on(TimerManagerListener::Minute, u_int32_t aTick) throw() {
 		SearchManager::getInstance()->search(searchString, 0, SearchManager::TYPE_HASH, SearchManager::SIZE_DONTCARE);
 	} else if(!fn.empty()) {
 		SearchManager::getInstance()->search(searchString, sz, ShareManager::getInstance()->getType(fn), SearchManager::SIZE_ATLEAST);
-		nextSearch = aTick + (online ? 2000 : 5000);
 	}
 }
 
@@ -1261,5 +1261,5 @@ void QueueManager::on(TimerManagerListener::Second, u_int32_t aTick) throw() {
 
 /**
  * @file
- * $Id: QueueManager.cpp,v 1.93 2004/08/02 15:29:19 arnetheduck Exp $
+ * $Id: QueueManager.cpp,v 1.94 2004/08/07 09:36:05 arnetheduck Exp $
  */
