@@ -162,7 +162,6 @@ string ResourceManager::strings[] = {
 "DC++ has detected a MAGNET link with a file hash that can be searched for on the Direct Connect network.  What would you like to do?", 
 "MAGNET Link detected", 
 "Download files from the Direct Connect network", 
-"Magnet-Handler was not detected.  Please install it from: http://sf.net/projects/magnethandler/", 
 "DC++", 
 "URL:MAGNET URI", 
 "Manual connect address", 
@@ -619,7 +618,6 @@ string ResourceManager::names[] = {
 "MagnetDlgTextGood", 
 "MagnetDlgTitle", 
 "MagnetHandlerDesc", 
-"MagnetHandlerNotFound", 
 "MagnetHandlerRoot", 
 "MagnetShellDesc", 
 "ManualAddress", 
