@@ -524,13 +524,17 @@ LRESULT MainFrame::OnFileSettings(WORD /*wNotifyCode*/, WORD /*wID*/, HWND /*hWn
 	if(dlg.DoModal(m_hWnd) == IDOK)
 	{
 		SettingsManager::getInstance()->save();
- 		if(missedAutoConnect && !SETTING(NICK).empty()) {
- 			PostMessage(WM_SPEAKER, AUTO_CONNECT);
- 		}
+		if(missedAutoConnect && !SETTING(NICK).empty()) {
+			PostMessage(WM_SPEAKER, AUTO_CONNECT);
+		}
 		if(SETTING(CONNECTION_TYPE) != lastConn || SETTING(IN_PORT) != lastPort) {
 			startSocket();
 		}
 		ClientManager::getInstance()->infoUpdated();
+		if(BOOLSETTING(URL_HANDLER)) {
+			WinUtil::registerDchubHandler();
+		}
+		WinUtil::registerMagnetHandler();
 	}
 	return 0;
 }
@@ -1060,5 +1064,5 @@ void MainFrame::on(QueueManagerListener::Finished, QueueItem* qi) throw() {
 
 /**
  * @file
- * $Id: MainFrm.cpp,v 1.61 2004/08/02 15:29:19 arnetheduck Exp $
+ * $Id: MainFrm.cpp,v 1.62 2004/08/07 09:36:05 arnetheduck Exp $
  */
